# NonMon

./: NonMon.cabal  README.md  prog.txt  prog2.txt
examples/: prog.txt  prog2.txt  prog3.txt
src/: Main.hs
src/Language/: Evaluate.hs  Parser.hs  Printer.hs  Syntax.hs  Typing.hs
test/Language/: EvaluateTest.hs  LanguageTest.hs  ParserTest.hs
test/golden_files/: prog1.fl.eval  prog1.fl.parsed
test/golden_files/parser/: prog1.fl
