name:                NonMon
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rubenpieters/NonMon#readme
license:             BSD3
license-file:        LICENSE
author:              Ruben Pieters
maintainer:          rubenpietersgithub@gmail.com
copyright:           2018 Ruben Pieters
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Main
                       Language.Parser
                       Language.Syntax
                       Language.Evaluate
                       Language.Printer
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , parsec
