name:                NonMon
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rubenpieters/NonMon#readme
license:             BSD3
license-file:        LICENSE
author:              Ruben Pieters
maintainer:          rubenpietersgithub@gmail.com
copyright:           2018 Ruben Pieters
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Main
                       Language.Parser
                       Language.Syntax
                       Language.Evaluate
                       Language.Printer
                       Language.Typing
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , parsec

test-suite test
  default-language:    Haskell2010
  main-is:             Driver.hs
  hs-source-dirs:      test
  type:                exitcode-stdio-1.0
  build-depends:       base >= 4.7 && < 5
                     , NonMon
                     , bytestring
                     , filepath
                     , tasty
                     , tasty-discover
                     , tasty-golden
